--- a/innerGraphStyle.css
+++ b/innerGraphStyle.css
@@ -1,7 +1,8 @@
 .graphContainer {
     position: absolute;
     border: 2px solid #141414;
-    background-color: #ff0000; /* This color is not visible */
+    background-color: #ff0000;
+    /* This color is not visible */
     border-radius: 7px;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
     overflow: hidden;
@@ -38,8 +39,9 @@
 }
 
 .graphHeader button {
-    aspect-ratio: 1; /* Square shaped */
-    margin:none;
+    aspect-ratio: 1;
+    /* Square shaped */
+    margin: none;
     vertical-align: middle;
     text-align: center;
     border: none;
@@ -51,7 +53,7 @@
 
 .graphHeader button:hover {
     background-color: #ffc66d;
-    color: black
+    color: black;
 }
 
 .graphOptions button {
@@ -60,6 +62,63 @@
 
 .graphContent {
     background-color: #1d1d1d;
+}
+
+.methodsElem {
+    display: none;
+    height: 30%;
+    background-color: #141414;
+    width: calc(100% - 4px);
+    position: absolute;
+    bottom: 2px;
+    left: 2px;
+    font-weight: bold;
+    overflow-y: auto;
+    /* padding: 10px 10px 0px 10px; */
+}
+
+.methodsElem p {
+    width: 80%;
+}
+
+#closeButtonME {
+    display: inline-flex;
+    position: sticky;
+    top: 1%;
+    float: right;
+    border: none;
+    aspect-ratio: 1;
+    background: none;
+    border-radius: 50%;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    margin: 3px;
+}
+
+#closeButtonME:hover {
+    background: #ffc66d;
+    color: #000;
+}
+
+.top-resize-handle {
+    /* background-color: #ff0000; */
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 3px;
+    cursor: ns-resize;
+    z-index: 99999;
+}
+
+.methodsElementToggle {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: none;
+    color: #fff;
+    z-index: 999;
 }
 
 .resize-handle {
@@ -100,22 +159,24 @@ svg {
 
 .rearrangeMethods {
     display: inline-block;
-    margin:none;
+    margin: none;
     margin-left: 10px;
     user-select: none;
 }
 
 .rearrangeMethods button:hover {
-    background: #003992; /* Becomes #ffc66d when inverted */
+    background: #003992;
+    /* Becomes #ffc66d when inverted */
     color: white;
     filter: invert(1);
 }
 
 .methodsDiv {
     position: absolute;
-    background-color: #1f252a;
+    background-color: #141414;
     padding: 3px;
     border-radius: 3px;
+    z-index: 999;
 }
 
 .methodsDiv button {
@@ -124,11 +185,11 @@ svg {
     aspect-ratio: auto;
     text-align: left;
     padding: 3px 10px 3px 15px;
-    background-color: #1f252a;
+    background-color: #1d1d1d;
     color: #fff;
     border-radius: 3px;
 }
 
 .methodsDiv button:hover {
-    background-color: #333f46;
+    background-color: #ffc66d;
 }
