--- a/innerGraphStyle.css
+++ b/innerGraphStyle.css
@@ -184,12 +184,15 @@ svg {
     width: 100%;
     aspect-ratio: auto;
     text-align: left;
+    outline: none;
+    border: none;
     padding: 3px 10px 3px 15px;
-    background-color: #1d1d1d;
+    background-color: #141414;
     color: #fff;
     border-radius: 3px;
 }
 
 .methodsDiv button:hover {
     background-color: #ffc66d;
+    color: #000;
 }
