--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ img {
     margin-top: 15px;
     display: block;
     height: 15vh;
+    width: 100%;
     padding: 0px 20px 20px 20px;
     overflow-y: scroll;
     box-sizing: border-box;
